<resources>
    <string name="A_cashout_request_has_already_been_submitted">A cashout request has already been submitted.</string>
    <string name="A_phone_number_is_required">A phone number is required</string>
    <string name="A_valid_PayPal_email_address_is_required">A valid PayPal email address is required</string>
    <string name="A_valid_country_is_required">A valid country is required</string>
    <string name="About">About</string>
    <string name="Accept">Accept</string>
    <string name="Accept_friend">Accept friend</string>
    <string name="Account">Account</string>
    <string name="Add">Add</string>
    <string name="Add_Friends_on_HQ">Add Friends on HQTV</string>
    <string name="Add_friend">Add friend</string>
    <string name="Add_people_you_know">Add people you know</string>
    <string name="Agree_and_Continue">Agree and Continue</string>
    <string name="Airing_Soon">Airing Soon</string>
    <string name="All_shows_have_been_reviewed_You_re_all_set_for_cashing_out_Learn_more">All shows have been reviewed! You’re all set for cashing out. Learn more</string>
    <string name="All_time">All time</string>
    <string name="Allow_HQ_access_to_your_camera_so_you_can_take_photos_during_the_game">Allow HQTV access to your camera so you can take photos during the game.</string>
    <string name="Already_submitted">Already submitted</string>
    <string name="An_error_occurred_while_accepting_request">An error occurred while accepting request.</string>
    <string name="An_error_occurred_while_blocking_user">An error occurred while blocking user.</string>
    <string name="An_error_occurred_while_cancelling_request">An error occurred while cancelling request.</string>
    <string name="An_error_occurred_while_retrieving_user">An error occurred while retrieving user.</string>
    <string name="An_error_occurred_while_retrieving_your_profile">An error occurred while retrieving your profile.</string>
    <string name="An_error_occurred_while_sending_friend_request_to_user">An error occurred while sending friend request to user.</string>
    <string name="An_error_occurred_while_unfriending_user">An error occurred while unfriending user.</string>
    <string name="An_update_to_the_latest_version_of_the_app_is_required">An update to the latest version of the app is required</string>
    <string name="Answer_questions_think_fast">Answer questions, think fast</string>
    <string name="Answer_trivia_questions_to_win_rewards">Answer trivia questions to win rewards!</string>
    <string name="Apple">Apple</string>
    <string name="Apply_referral_code">Apply referral code</string>
    <string name="Approved">Approved</string>
    <string name="Are_you_sure_you_want_to_block_username">Are you sure you want to block %{username}?</string>
    <string name="Are_you_sure_you_want_to_cashout_to_PayPal_account_email">Are you sure you want to cashout to PayPal account %{email}?</string>
    <string name="Are_you_sure_you_want_to_kick_username">Are you sure you want to kick %{username}?</string>
    <string name="Are_you_sure_you_want_to_leave_the_game">Are you sure you want to leave the game?</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="Art_Design">Art &amp; Design</string>
    <string name="Available">Available</string>
    <string name="Available_Balance">Available Balance</string>
    <string name="Back_in_the_game">Back in the game!</string>
    <string name="Back_in_the_game_You_used_an_Extra_Life">Back in the game! You used an Extra Life.</string>
    <string name="Badge_unlocked">Badge unlocked!</string>
    <string name="Badges">Badges</string>
    <string name="Badges_in_this_set">Badges in this set</string>
    <string name="Balance">Balance</string>
    <string name="Balance_In_Review">Balance In Review</string>
    <string name="Be_prepared_Buy_Extra_Lives_before_the_game_begins">Be prepared! Buy Extra Lives before the game begins.</string>
    <string name="Be_prepared_Buy_Extra_Lives_for_this_game_to_help_you_win">Be prepared! Buy Extra Lives for this game to help you win.</string>
    <string name="Be_prepared_Buy_more_Extra_Lives_to_help_you_win">Be prepared! Buy more Extra Lives to help you win.</string>
    <string name="Beta">Beta</string>
    <string name="Block">Block</string>
    <string name="Block_user">Block user</string>
    <string name="Bonus">Bonus:</string>
    <string name="Boost">Boost</string>
    <string name="Boosted">Boosted</string>
    <string name="Bundle">Bundle</string>
    <string name="Business">Business</string>
    <string name="Buy">Buy</string>
    <string name="Buy_More_Coins">Buy More Coins</string>
    <string name="By_continuing_you_agree_to_the_terms_and_pp" formatted="false">By continuing, you agree to the %{terms} and %{pp}.</string>
    <string name="By_entering_you_agree_to_the_competition">By entering you agree to the %{competition}</string>
    <string name="By_signing_up_you_agree_to_the">By signing up you agree to the</string>
    <string name="By_signing_up_you_agree_to_the_n_terms_privacy_and_rules" formatted="false">"By signing up you agree to the
 %{terms}, %{privacy}, and %{rules}"</string>
    <string name="By_signing_up_you_agree_to_the_terms_privacy_and_rules" formatted="false">By signing up you agree to the %{terms}, %{privacy}, and %{rules}</string>
    <string name="By_tapping_Agree_and_continue_you_agree_to_the_terms_privacy_and_rules" formatted="false">By tapping Agree and continue you agree to the %{terms}, %{privacy}, and %{rules}</string>
    <string name="By_tapping_Get_Started_an_SMS_may_be_sent_Message_data_rates_may_apply">By tapping Get Started, an SMS may be sent. Message &amp; data rates may apply.</string>
    <string name="By_tapping_Next_an_SMS_may_be_sent_Message_data_rates_may_apply">By tapping Next, an SMS may be sent. Message &amp; data rates may apply.</string>
    <string name="Calculating_rewards">Calculating rewards</string>
    <string name="Call_me">Call me</string>
    <string name="Camera_Access_Disabled">Camera Access Disabled</string>
    <string name="Can_retry_in_seconds">Can retry in %{seconds}</string>
    <string name="Can_t_Cashout">"Can't Cashout"</string>
    <string name="Cancel">Cancel</string>
    <string name="Cashout">Cashout</string>
    <string name="Cashout_Complete">Cashout Complete</string>
    <string name="Cashout_Currently_Disabled">Cashout Currently Disabled</string>
    <string name="Cashout_amount">Cashout %{amount}</string>
    <string name="Cashout_for_one_or_more_shows_that_you_have_won_is_temporarily_disabled_Please_try_again_later">Cashout for one or more shows that you have won is temporarily disabled. Please try again later.</string>
    <string name="Cashout_with_PayPal">Cashout with PayPal</string>
    <string name="Cashouts_are_currently_disabled_Please_try_again_later">Cashouts are currently disabled. Please try again later.</string>
    <string name="Cashouts_are_disabled">Cashouts are disabled</string>
    <string name="Cashouts_to_PayPal_are_temporarily_disabled_Please_contact_customer_support">Cashouts to PayPal are temporarily disabled. Please contact customer support.</string>
    <string name="Categories">Categories</string>
    <string name="Category">Category</string>
    <string name="Change_username">Change username</string>
    <string name="Charity_donations_are_temporarily_disabled_Please_contact_customer_support">Charity donations are temporarily disabled. Please contact customer support.</string>
    <string name="Choose_from_Photos">Choose from Photos</string>
    <string name="Choose_from_camera_roll">Choose from camera roll</string>
    <string name="Choose_the_show_you_heard_about_and_enter_your_friend_s_referral_code_to_earn_a_reward">Choose the show you heard about and enter your friend’s referral code to earn a reward</string>
    <string name="Chosen_username_already_exists">Chosen username already exists</string>
    <string name="Close">Close</string>
    <string name="Code">PIN (or 1234)</string>
    <string name="Code_sent_Retry_in_seconds">Code sent. Retry in %{seconds}</string>
    <string name="Coins">Coins</string>
    <string name="Coins_few">Coins</string>
    <string name="Coins_many">Coins</string>
    <string name="Coins_one">Coin</string>
    <string name="Coins_two">Coins</string>
    <string name="Coins_zero">Coins</string>
    <string name="Cold">Cold</string>
    <string name="Collect">Collect</string>
    <string name="Color_Test">Color Test</string>
    <string name="Come_back_into_the_game_for_your_chance_to_win">Come back into the game for your chance to win.</string>
    <string name="Coming_Soon">Coming Soon</string>
    <string name="Coming_soon_To_get_in_early_play_near_someone_with_access_and_their_nearby_setting_enabled">Coming soon. To get in early, play near someone with access and their nearby setting enabled.</string>
    <string name="Complete">Complete!</string>
    <string name="Confirm">Confirm</string>
    <string name="Confirm_email">Confirm email</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="Congratulations_n_Tell_your_friends">"Congratulations!
Tell your friends!"</string>
    <string name="Connect">Connect</string>
    <string name="Connect_Address_Book">Connect Address Book</string>
    <string name="Connect_Contacts">Connect Contacts</string>
    <string name="Connect_Instagram">Connect Instagram</string>
    <string name="Donate">Donate</string>
    <string name="Done">Done</string>
    <string name="Email_address">Email address</string>
    <string name="First_join_the_live_game">First, join the live game</string>
    <string name="Full_Name">Full Name</string>
    <string name="Get_them_all_right_and_you_win">Get them all right and you win</string>
    <string name="HQ_Trivia">HQTV Trivia</string>
    <string name="Help_us_spread_the_word">Help us spread the word</string>
    <string name="Hit_us_up_on_Twitter_hqtrivia">Hit us up on Twitter @playhqtv</string>
    <string name="If_everyone_gets_eliminated_the_n_prize_rolls_over_to_the_next_day">"If everyone gets eliminated, the
prize rolls over to the next day."</string>
    <string name="If_more_than_one_person_makes_it_to_the_end_then_split_the_prize">If more than one person makes it to the end, then split the prize.</string>
    <string name="If_you_tap_an_incorrect_answer_n_or_you_run_out_of_time_you_ll_be_n_eliminated_from_winning_the_priz">"If you tap an incorrect answer
or you run out of time, you'll be
eliminated from winning the prize."</string>
    <string name="In_order_to_donate_your_winnings_please_fill_out_all_fields_below">In order to donate your winnings, please fill out all fields below.</string>
    <string name="Love_HQ">Love HQTV</string>
    <string name="No_winners_No_worries">No winners? No worries</string>
    <string name="Not_now">Not now</string>
    <string name="Once_you_have_won_you_can_cashout_n_directly_to_your_PayPal_account">"Once you have won, you can cashout
directly to your PayPal account."</string>
    <string name="One_strike_and_you_re_out">"One strike and you're out"</string>
    <string name="Rate_us">Rate us</string>
    <string name="Referral_Code">Referral Code</string>
    <string name="Referral_code">Referral code</string>
    <string name="Still_have_questions">Still have questions?</string>
    <string name="Tap_the_answer_you_think_is_n_correct_in_under_10_seconds">"Tap the answer you think is
correct in under 10 seconds."</string>
    <string name="We_ll_send_a_push_notification_Don_t_be_late_or_you_ll_watch_only">"We'll send a push notification. Don't be late or you'll watch only."</string>
    <string name="You_need_more_Coins_to_buy_that_Power_Up">You need more Coins to buy that Power Up</string>
</resources>