<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:padding="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/sectionImg1" android:layout_width="@dimen/how_to_play_image" android:layout_height="@dimen/how_to_play_image" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/how_to_play_notification" />
            <TextView android:gravity="center" android:id="@id/section1_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/First_join_the_live_game" android:textAlignment="center" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg1" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section1_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/We_ll_send_a_push_notification_Don_t_be_late_or_you_ll_watch_only" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section1_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg2" android:layout_width="@dimen/how_to_play_image" android:layout_height="@dimen/how_to_play_image" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section1_body" app:srcCompat="@drawable/how_to_play_multiple_choice" />
            <TextView android:gravity="center" android:id="@id/section2_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Answer_questions_think_fast" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg2" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section2_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Tap_the_answer_you_think_is_n_correct_in_under_10_seconds" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section2_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg3" android:layout_width="@dimen/how_to_play_image" android:layout_height="@dimen/how_to_play_image" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section2_body" app:srcCompat="@drawable/how_to_play_one_strike" />
            <TextView android:gravity="center" android:id="@id/section3_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/One_strike_and_you_re_out" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg3" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section3_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/If_you_tap_an_incorrect_answer_n_or_you_run_out_of_time_you_ll_be_n_eliminated_from_winning_the_priz" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section3_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg4" android:layout_width="196.0dip" android:layout_height="@dimen/how_to_play_image" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section3_body" app:srcCompat="@drawable/how_to_play_trophy" />
            <TextView android:gravity="center" android:id="@id/section4_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Get_them_all_right_and_you_win" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg4" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section4_body" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/If_more_than_one_person_makes_it_to_the_end_then_split_the_prize" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section4_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg5" android:layout_width="@dimen/how_to_play_image" android:layout_height="@dimen/how_to_play_image" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section4_body" app:srcCompat="@drawable/how_to_play_cashout" />
            <TextView android:gravity="center" android:id="@id/section5_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/No_winners_No_worries" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg5" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section5_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/If_everyone_gets_eliminated_the_n_prize_rolls_over_to_the_next_day" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section5_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg6" android:layout_width="@dimen/how_to_play_image" android:layout_height="@dimen/how_to_play_image" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section5_body" app:srcCompat="@drawable/how_to_play_paypal" />
            <TextView android:gravity="center" android:id="@id/section6_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Cashout_with_PayPal" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg6" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section6_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Once_you_have_won_you_can_cashout_n_directly_to_your_PayPal_account" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section6_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg7" android:layout_width="@dimen/grid_10" android:layout_height="@dimen/grid_10" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section6_body" app:srcCompat="@drawable/how_to_play_twitter" />
            <TextView android:gravity="center" android:id="@id/section7_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/Still_have_questions" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg7" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section7_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Hit_us_up_on_Twitter_hqtrivia" android:onClick="startTwitterIntent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section7_title" style="@style/BodySecondary" />® </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
