<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/donateToolbar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:navigationIcon="?homeAsUpIndicator" app:title="@string/Donate" style="@style/ToolbarLight" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/body" android:gravity="center|top" android:id="@id/donateTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_2" android:text="@string/In_order_to_donate_your_winnings_please_fill_out_all_fields_below" android:textAlignment="center" app:layout_constraintLeft_toLeftOf="@id/emailEditText" app:layout_constraintRight_toRightOf="@id/emailEditText" app:layout_constraintTop_toBottomOf="@id/donateToolbar" style="@style/Caption1Secondary" />
    <EditText android:textColor="@color/dark_grey" android:textColorHint="@color/text_body_secondary" android:id="@id/fullNameEditText" android:background="@drawable/edit_text_rounded_border" android:padding="@dimen/grid_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:hint="@string/Full_Name" android:inputType="textPersonName" android:fontFamily="@font/circularstdbook" android:layout_marginStart="@dimen/grid_5" android:layout_marginEnd="@dimen/grid_5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/donateTextView" />
    <EditText android:textColor="@color/dark_grey" android:textColorHint="@color/text_body_secondary" android:id="@id/emailEditText" android:background="@drawable/edit_text_rounded_border" android:padding="@dimen/grid_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_2" android:hint="@string/Email_address" android:inputType="textEmailAddress" android:fontFamily="@font/circularstdbook" android:layout_marginStart="@dimen/grid_5" android:layout_marginEnd="@dimen/grid_5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fullNameEditText" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="20.0sp" android:textColor="@color/text_body_secondary" android:id="@id/donateButton" android:layout_width="0.0dip" android:layout_marginTop="@dimen/grid_4" android:text="@string/Done" android:backgroundTint="@color/light_grey" app:autoSizeMaxTextSize="20.0sp" app:autoSizeTextType="uniform" app:layout_constraintLeft_toLeftOf="@id/emailEditText" app:layout_constraintRight_toRightOf="@id/emailEditText" app:layout_constraintTop_toBottomOf="@id/emailEditText" style="@style/ButtonRound" />
    <ProgressBar android:id="@id/loadingIndicator" android:layout_width="wrap_content" android:layout_height="@dimen/grid_6" app:layout_constraintBottom_toBottomOf="@id/donateButton" app:layout_constraintEnd_toEndOf="@id/donateButton" app:layout_constraintStart_toStartOf="@id/donateButton" app:layout_constraintTop_toTopOf="@id/donateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
