<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/rounded_rect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/grid_2" android:layout_marginEnd="@dimen/grid_2"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/subheadline" android:textStyle="bold" android:textColor="@color/text_primary" android:gravity="center" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_4" android:layout_marginBottom="@dimen/grid_4" android:text="@string/You_need_more_Coins_to_buy_that_Power_Up" android:layout_marginStart="@dimen/grid_6" android:layout_marginEnd="@dimen/grid_6" app:autoSizeMaxTextSize="@dimen/subheadline" app:autoSizeTextType="uniform" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/webStoreButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_2" android:layout_marginBottom="@dimen/grid_6" android:text="@string/Buy_More_Coins" android:paddingStart="@dimen/grid_5" android:paddingEnd="@dimen/grid_5" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/ButtonRound" />
    <Button android:textSize="@dimen/body" android:textColor="@color/text_header_secondary" android:gravity="center" android:id="@id/dismissButton" android:layout_width="wrap_content" android:layout_height="@dimen/grid_6" android:layout_marginTop="@dimen/grid_1" android:layout_marginBottom="@dimen/grid_4" android:text="@string/Not_now" app:autoSizeMaxTextSize="@dimen/body" app:autoSizeTextType="uniform" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/webStoreButton" style="@style/Widget.AppCompat.Button.Borderless" />
</androidx.constraintlayout.widget.ConstraintLayout>
