<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:background="@drawable/rounded_rect" android:paddingTop="@dimen/grid_3" android:paddingBottom="@dimen/grid_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/grid_2" android:paddingEnd="@dimen/grid_2"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/rating_prompt_image" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_stars" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/rating_prompt_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_2" android:text="@string/Love_HQ" app:autoSizeMaxTextSize="@dimen/headline" app:autoSizeTextType="uniform" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rating_prompt_image" style="@style/Headline" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/rating_prompt_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Help_us_spread_the_word" android:fontFamily="@font/circularstdbook" app:autoSizeMaxTextSize="@dimen/headline" app:autoSizeTextType="uniform" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rating_prompt_title" style="@style/SubheadlineSecondary" />
    <androidx.appcompat.widget.AppCompatButton android:id="@id/rate_us_button" android:layout_width="wrap_content" android:layout_height="@dimen/grid_6" android:layout_marginTop="@dimen/grid_2" android:text="@string/Rate_us" android:paddingStart="@dimen/grid_4" android:paddingEnd="@dimen/grid_4" android:backgroundTint="@color/hq_red" app:autoSizeMaxTextSize="@dimen/body" app:autoSizeTextType="uniform" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rating_prompt_subtitle" style="@style/ButtonRound" />
</androidx.constraintlayout.widget.ConstraintLayout>
