<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="@dimen/grid_7"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:textColor="@color/mid_grey" android:id="@id/showReferralView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/Referral_code" android:fontFamily="@font/circularstdbook" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/showReferralTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/HQ_Trivia" android:layout_marginStart="@dimen/grid_2" app:layout_constraintBottom_toBottomOf="@id/showReferralView" app:layout_constraintStart_toStartOf="@id/showReferralView" app:layout_constraintTop_toTopOf="@id/showReferralView" style="@style/BodySecondary" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center_vertical" android:id="@id/showReferralCode" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Referral_Code" android:maxLines="1" android:layout_marginStart="5.0dip" android:layout_marginEnd="@dimen/grid_1" app:autoSizeMaxTextSize="@dimen/body" app:autoSizeTextType="uniform" app:layout_constraintBottom_toBottomOf="@id/showReferralView" app:layout_constraintEnd_toStartOf="@id/showReferralTooltipButton" app:layout_constraintStart_toEndOf="@id/showReferralTitle" app:layout_constraintTop_toTopOf="@id/showReferralView" style="@style/BodySecondary" />
    <Button android:id="@id/showReferralTooltipButton" android:background="@drawable/button_round_transparent" android:layout_width="@dimen/grid_9" android:layout_height="@dimen/touch_target_min_width_height" app:layout_constraintBottom_toBottomOf="@id/showReferralView" app:layout_constraintEnd_toEndOf="@id/showReferralView" app:layout_constraintTop_toTopOf="@id/showReferralView" />
    <ImageView android:id="@id/showReferralDrawable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/grid_2" app:layout_constraintBottom_toBottomOf="@id/showReferralView" app:layout_constraintEnd_toEndOf="@id/showReferralView" app:layout_constraintStart_toEndOf="@string/Referral_Code" app:layout_constraintTop_toTopOf="@id/showReferralView" />
</androidx.constraintlayout.widget.ConstraintLayout>
