<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="@dimen/grid_2" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/discover_people_section_divider" android:background="@color/light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/grid_2" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/hq_purple" android:id="@id/connect_contacts" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="@dimen/grid_2" android:text="@string/Connect_Contacts" android:fontFamily="@font/circularstdbold" android:paddingEnd="@dimen/grid_1" app:autoSizeMaxTextSize="16.0sp" app:autoSizeTextType="uniform" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/connect" app:layout_constraintTop_toBottomOf="@id/discover_people_section_divider" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/mid_grey" android:id="@id/add_people_you_know" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Add_people_you_know" android:fontFamily="@font/circularstdbook" android:paddingEnd="@dimen/grid_1" app:autoSizeMaxTextSize="16.0sp" app:autoSizeTextType="uniform" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/connect" app:layout_constraintTop_toBottomOf="@id/connect_contacts" />
    <Button android:id="@id/connect" android:layout_width="wrap_content" android:text="@string/Connect" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/connect_contacts" style="@style/ButtonRoundSmall" />
    <ProgressBar android:id="@id/connect_contacts_progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="@id/connect" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/connect_contacts" style="?android:progressBarStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
